--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,72 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
+
+
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="30dp"
+        android:src="@mipmap/ic_splash_image"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingLeft="20dp"
+        android:layout_weight="0.5"
+        android:paddingRight="20dp"
+        android:gravity="center">
+
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:shadowColor="@color/colorAccent"
+        android:id="@+id/player_one_name_edit_text"
+        android:layout_marginBottom="20dp"
+        android:textColor="@color/colorAccent"
+        android:hint="@string/player_1_name"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:shadowColor="@color/colorAccent"
+        android:textColor="@color/colorAccent"
+        android:id="@+id/player_two_name_edit_text"
+        android:layout_below="@+id/player_one_name_edit_text"
+        android:hint="@string/player_2_name"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
+        android:layout_below="@+id/player_two_name_edit_text"
+        android:layout_marginTop="20dp"
+        android:text="@string/start"
+        android:textSize="20dp"
+        android:onClick="startGame"
+        android:textColor="@android:color/white"/>
+
+    </RelativeLayout>
+
+
+
+        <android.support.design.widget.BottomNavigationView
+            android:id="@+id/bottom_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:itemBackground="@color/colorAccent"
+            app:itemTextColor="@android:color/white"
+            app:menu="@menu/bottom_navigation_main" />
+
+    </LinearLayout>
+
+
 
 </android.support.constraint.ConstraintLayout>
