--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -25,7 +25,7 @@
                 android:layout_height="80dp"
                 android:textSize="22sp"
                 android:textColor="#FFFFFF"
-                android:background="@android:color/holo_green_dark"
+                android:background="#2E2E2E"
                 android:gravity="center"
                 android:layout_margin="8dp"
                 style="@style/Widget.AppCompat.Button" />
@@ -36,7 +36,7 @@
                 android:layout_height="80dp"
                 android:textSize="22sp"
                 android:textColor="#FFFFFF"
-                android:background="@android:color/holo_green_dark"
+                android:background="#2E2E2E"
                 android:gravity="center"
                 android:layout_margin="8dp"
                 style="@style/Widget.AppCompat.Button"
@@ -48,7 +48,7 @@
                 android:layout_height="80dp"
                 android:textSize="22sp"
                 android:textColor="#FFFFFF"
-                android:background="@android:color/holo_green_dark"
+                android:background="#2E2E2E"
                 android:gravity="center"
                 android:layout_margin="8dp"
                 style="@style/Widget.AppCompat.Button" />
@@ -63,7 +63,7 @@
                 android:layout_height="80dp"
                 android:textSize="22sp"
                 android:textColor="#FFFFFF"
-                android:background="@android:color/holo_green_dark"
+                android:background="#2E2E2E"
                 android:gravity="center"
                 android:layout_margin="8dp"
                 style="@style/Widget.AppCompat.Button" />
@@ -74,7 +74,7 @@
                 android:layout_height="80dp"
                 android:textSize="22sp"
                 android:textColor="#FFFFFF"
-                android:background="@android:color/holo_green_dark"
+                android:background="#2E2E2E"
                 android:gravity="center"
                 android:layout_margin="8dp"
                 style="@style/Widget.AppCompat.Button" />
@@ -85,7 +85,7 @@
                 android:layout_height="80dp"
                 android:textSize="22sp"
                 android:textColor="#FFFFFF"
-                android:background="@android:color/holo_green_dark"
+                android:background="#2E2E2E"
                 android:gravity="center"
                 android:layout_margin="8dp"
                 style="@style/Widget.AppCompat.Button" />
@@ -100,7 +100,7 @@
                 android:layout_height="80dp"
                 android:textSize="22sp"
                 android:textColor="#FFFFFF"
-                android:background="@android:color/holo_green_dark"
+                android:background="#2E2E2E"
                 android:gravity="center"
                 android:layout_margin="8dp"
                 style="@style/Widget.AppCompat.Button" />
@@ -111,7 +111,7 @@
                 android:layout_height="80dp"
                 android:textSize="22sp"
                 android:textColor="#FFFFFF"
-                android:background="@android:color/holo_green_dark"
+                android:background="#2E2E2E"
                 android:gravity="center"
                 android:layout_margin="8dp"
                 style="@style/Widget.AppCompat.Button" />
@@ -122,7 +122,7 @@
                 android:layout_height="80dp"
                 android:textSize="22sp"
                 android:textColor="#FFFFFF"
-                android:background="@android:color/holo_green_dark"
+                android:background="#2E2E2E"
                 android:gravity="center"
                 android:layout_margin="8dp"
                 style="@style/Widget.AppCompat.Button" />
