--- a/app/src/main/res/layout/fragment_score.xml
+++ b/app/src/main/res/layout/fragment_score.xml
@@ -9,12 +9,12 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
+            android:textSize="30dp"
             android:gravity="center"
             android:textStyle="bold"
             android:layout_marginBottom="20dp"
             android:id="@+id/player_turn_text"
-            android:textColor="@color/colorAccent"
+            android:textColor="@android:color/holo_green_dark"
             android:text="Player X's Turn "/>
 
          <LinearLayout
