--- a/app/src/main/res/layout/view_holder.xml
+++ b/app/src/main/res/layout/view_holder.xml
@@ -13,7 +13,6 @@
         android:layout_weight="0.1"
         android:textSize="15dp"
         android:textStyle="bold"
-        android:padding="2dp"
         android:id="@+id/game_number"
         android:text="Game Number"/>
 
@@ -23,17 +22,16 @@
         android:layout_weight="0.4"
         android:textSize="15dp"
         android:textStyle="bold"
-        android:padding="2dp"
         android:id="@+id/winner_details"
         android:text="Winner Details" />
 
     <TextView
         android:layout_width="wrap_content"
-        android:padding="2dp"
         android:layout_height="match_parent"
         android:layout_weight="0.5"
-        android:id="@+id/date_time"
+        android:id="@+id/date_holder"
         android:textSize="15dp"
+        android:gravity="end"
         android:textStyle="bold"
         android:text="Time and Date" />
 
